Style and Structure

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,3 +1,4 @@
+<div id="page_wrapper">
 <h1>Make something</h1>
 
 <%= form_for :post, url: posts_path do |f| %>
@@ -18,3 +19,5 @@
 	</p>
 
 	<% end %>
+
+	</div>
