--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,7 +5,9 @@
 </h1>
 
 <p class="date">
-	Submited <%= time_ago_in_words(@post.created_at) %> ago
+	Submited <%= time_ago_in_words(@post.created_at) %> ago |
+	<%= link_to 'Edit', edit_post_path(@post) %> |
+	<%= link_to 'Delete', post_path(@post), method: :delete, data: {confirm: 'Are you shure?'} %>
 </p> 
 
 <p class="body">
