--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 	<ul>
 		<li class="category"><%= link_to "Tumblr", root_path %></li>
 		<li><%= link_to "Posts", root_path %></li>
-		<li>About</li>
+		<li><%= link_to 'About', about_path %></li>
 
 	</ul>
 
@@ -26,7 +26,19 @@
 
 <div id="main_content">
 	<div id="header">
+		
+		<%  if current_page?(root_path) %>
 		<p>Post Feed</p>
+		 <%  elsif current_page?(about_path) %>
+		 <p>My site</p>
+		<% else %>
+			<%= link_to 'Back to Post Feed', root_path %>
+		<% end %>
+
+
+		
+
+
 		<div class="buttons">
 			<button class="button"> <%= link_to "Make Post", new_post_path %></button>
 		<button class="button">Log Out</button>
