--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,56 +1,63 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Tumblr</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= stylesheet_link_tag 'application', 'https://fonts.googleapis.com/css?family=Raleway'  %>
+	<title>Tumblr</title>
+	<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+	<%= stylesheet_link_tag 'application', 'https://fonts.googleapis.com/css?family=Raleway'  %>
 
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= favicon_link_tag 'favicon.ico' %>
+	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+	<%= favicon_link_tag 'favicon.ico' %>
 
-  <%= csrf_meta_tags %>
+	<%= csrf_meta_tags %>
 </head>
 <body>
 
-<div id="sidebar">
-	<ul>
-		<li class="category"><%= link_to "Tumblr", root_path %></li>
-		<li><%= link_to "Posts", root_path %></li>
-		<li><%= link_to 'About', about_path %></li>
+	<div id="sidebar">
+		<ul>
+			<li class="category"><%= link_to "Tumblr", root_path %></li>
+			<li><%= link_to "Posts", root_path %></li>
+			<li><%= link_to 'About', about_path %></li>
 
-	</ul>
+		</ul>
+		<% unless user_signed_in? %>
+		<p class="sign_in"><%= link_to 'User Login', new_user_session_path %></p>
+		<% end %>
+	</div>
 
-	<p class="sign_in">User Login</p>
-
-</div>
-
-<div id="main_content">
-	<div id="header">
-		
-		<%  if current_page?(root_path) %>
-		<p>Post Feed</p>
-		 <%  elsif current_page?(about_path) %>
-		 <p>My site</p>
-		<% else %>
+	<div id="main_content">
+		<div id="header">
+			
+			<%  if current_page?(root_path) %>
+			<p>Post Feed</p>
+			<%  elsif current_page?(about_path) %>
+			<p>My site</p>
+			<% else %>
 			<%= link_to 'Back to Post Feed', root_path %>
+			<% end %>
+
+
+			
+
+			<% if user_signed_in? %>
+			<div class="buttons">
+				<button class="button"> <%= link_to "Make Post", new_post_path %></button>
+				<button class="button"><%= link_to "Log Out", destroy_user_session_path, method: :delete %></button>
+			</div>
+			<% end %>
+
+
+		</div>
+
+
+
+		<% flash.each do |name,msg| %>
+		<%= content_tag(:div, msg, class:"alert") %>
 		<% end %>
 
 
-		
 
-
-		<div class="buttons">
-			<button class="button"> <%= link_to "Make Post", new_post_path %></button>
-		<button class="button">Log Out</button>
-		</div>
+		<%= yield %>
 	</div>
-
-<% flash.each do |name,msg| %>
-<%= content_tag(:div, msg, class:"alert") %>
-<% end %>
-
-<%= yield %>
-</div>
 
 
 
